data/derived/fa15/progs/unify/prog1406.ml.out
Characters 21-26:
  let g2 () = (makeRand(0.1),makeRand(0.1),makeRand(10.18));;
                       ^^^^^
Error: This expression has type float but an expression was expected of type
         int * int
